Revision history for Perl extension Starch.

{{$NEXT}}
 - Fix Type::Tiny union constraints sometimes failing on Perl < 5.14.

0.01 2015-07-16

 - First version.
